--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,15 +18,15 @@
                    class="rounded-circle"/>
             </div>
             <div class="divider py-2 "></div>
-            <div class = row>
-              <img class="icon" src="./assets/resources/telega.png" alt="mts" height="32">
-              <a  href='https://t.me/stat_psy'>Мой канал в Telegram</a>
-            </div>
-<!--            Ссылка на инсту-->
 <!--            <div class = row>-->
-<!--            <img class="icon" src="./assets/resources/ins.png" alt="mts" height="32">-->
-<!--            <a  href='https://www.instagram.com/annas.numerique.insights'>Страница в Instagram</a>-->
+<!--              <img class="icon" src="./assets/resources/telega.png" alt="mts" height="32">-->
+<!--              <a  href='https://t.me/stat_psy'>Мой канал в Telegram</a>-->
 <!--            </div>-->
+<!--            Ссылка на инсту-->
+            <div class = row>
+            <img class="icon" src="./assets/resources/ins.png" alt="mts" height="32">
+            <a  href='https://www.instagram.com/venerakhabibullina?igsh=M3lpM2FkNGhzam14&utm_source=qr'>Страница в Instagram</a>
+            </div>
         </div>
       </div>
     </div>
