--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,8 +14,8 @@
         <div class="d-flex float-md-right h-100">
           <div class="image_outer_container">
             <div class="image_inner_container">
-              <img class="mx-auto d-block" width="175" height="180" src="./assets/resources/ava.png"
-                   class="rounded-circle"/>
+              <img ngSrc="./assets/resources/ava.png"
+                   class="rounded-circle" height="180" width="180"/>
             </div>
             <div class="divider py-2 "></div>
 <!--            <div class = row>-->
@@ -25,7 +25,7 @@
 <!--            Ссылка на инсту-->
             <div class = row>
             <img class="icon" src="./assets/resources/ins.png" alt="mts" height="32">
-            <a  href='https://www.instagram.com/x.numerolog?igsh=dWFrcnNnc2VqOWE2'>Страница в Instagram</a>
+            <a  href='https://www.instagram.com/marine_pro_matrix?igsh=MWhrd2FpYWd2MXcydw=='>Страница в Instagram</a>
             </div>
         </div>
       </div>
