--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,10 +18,10 @@
                    class="rounded-circle" height="180" width="180"/>
             </div>
             <div class="divider py-2 "></div>
-            <div class = row>
-              <img class="icon" src="./assets/resources/telega.png" alt="mts" height="32">
-              <a  href='https://t.me/+OliLcVyLpY5mMDVi'>Мой канал в Telegram</a>
-            </div>
+<!--            <div class = row>-->
+<!--              <img class="icon" src="./assets/resources/telega.png" alt="mts" height="32">-->
+<!--              <a  href='https://t.me/+OliLcVyLpY5mMDVi'>Мой канал в Telegram</a>-->
+<!--            </div>-->
 <!--            Ссылка на инсту-->
 <!--            <div class = row>-->
 <!--            <img class="icon" src="./assets/resources/ins.png" alt="mts" height="32">-->
