--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,8 +14,8 @@
         <div class="d-flex float-md-right h-100">
           <div class="image_outer_container">
             <div class="image_inner_container">
-              <img class="mx-auto d-block" width="175" height="180" src="./assets/resources/ava.png"
-                   class="rounded-circle"/>
+              <img ngSrc="./assets/resources/ava.png"
+                   class="rounded-circle" width="100" height="100" alt="avatar"/>
             </div>
             <div class="divider py-2 "></div>
             <div class = row>
