--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,8 +14,8 @@
         <div class="d-flex float-md-right h-100">
           <div class="image_outer_container">
             <div class="image_inner_container">
-              <img ngSrc="./assets/resources/ava.png"
-                   class="rounded-circle" height="180" width="180"/>
+              <img ngSrc="./assets/resources/ava.png" height="170" width="170"
+                   class="rounded-circle" />
             </div>
             <div class="divider py-2 "></div>
             <div class = row>
